# astrAI

./: .gitignore  DEPLOY.md  GCP_DEPLOY.md  README.md  app.py  archtecture.excalidraw  exit  labelsclassifier(CNN).ipynb  main.py  mlflow.db  mlruns.db  pyproject.toml
Spectral Data Cleaning and Sorting/: DataFecked - Data Cleaning and Plotting.ipynb
Spectral Data Cleaning and Sorting/Jupiter - mastDownload/UV data/: JUPITER_RAW_MASTER.pkl
Spectral Data Cleaning and Sorting/Mars - mastDownload/IR data/: SPITZER_S1_9004032_0003_0000_9_spect.tbl  SPITZER_S1_9004032_0003_0001_9_spect.tbl  SPITZER_S3_9004032_0004_0000_9_spect.tbl  SPITZER_S3_9004032_0005_0000_9_spect.tbl
Spectral Data Cleaning and Sorting/Neptune - mastDownload/IR data/: Cleaned_Neptune_IR.pkl  SPITZER_S0_4525056_0002_11_E7246293_tune.tbl  SPITZER_S0_4525056_0005_11_E7246302_tune.tbl  SPITZER_S1_4525056_0006_11_E7245167_tune.tbl  SPITZER_S3_4525056_0009_11_E7245312_tune.tbl
Spectral Data Cleaning and Sorting/Uranus - mastDownload/: URANUS_search_guide.csv
Spectral Service/: ._tmp_upload.fits
Spectral Service/app/: main.py
Spectral Service/app/routers/: analyze.py
Spectral Service/models/: ir_config.json  uv_config.json
Spectral Service/training/: augmentation.py  expanded_species.py  synthetic_generator.py  train_ir.py  train_uv.py
Test Data/: earth_ir.fits  earth_uv.fits
agent/agents/: image_model.py  orchestrator.py  reporter.py
experiments/: jupyter_spectral.ipynb  labelsclassifier(CNN).ipynb  mars_color.ipynb  unstructured_fits_to_structured_fits.ipynb
(+50 files in other folders)
