[project]
name = "astrai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "polar>=0.0.127",
    "torch>=2.10.0",
]
